# near-merch-store

./: REVIEW_CHANGES_APPLIED.md  bos.config.json  package-lock.json
_legacy/src/: App.tsx
_legacy/src/components/: CollectionDetailPage.tsx  SearchView.tsx
_legacy/src/styles/: globals.css
api/src/: contract.ts  index.ts  schema.ts
api/src/db/: schema.ts
api/src/services/: checkout.ts  products.ts
api/src/services/checkout/: errors.ts
api/src/services/fulfillment/: schema.ts
api/src/store/: products.ts
contracts/: .gitkeep  Makefile  README.md  bunfig.toml  package.json  tsconfig.json
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: lib.rs  nft_callbacks.rs  sale.rs  sale_views.rs
contracts/nft/: Cargo.toml
contracts/nft/src/: approval.rs  enumeration.rs  lib.rs  metadata.rs  mint.rs  nft_core.rs  royalty.rs
contracts/scripts/: deploy-local.ts  deploy.ts  stop-sandbox.ts
contracts/tests/: README.md  marketplace.test.ts  nft.test.ts  setup.ts
host/: package.json  rsbuild.config.ts  server.ts
host/src/: config.ts  main.tsx
host/src/db/schema/: auth.ts
host/src/lib/: auth.ts
ui/: package.json
ui/src/: bootstrap.tsx  routeTree.gen.ts
ui/src/components/: favorite-button.tsx  marketplace-footer.tsx  marketplace-header.tsx
ui/src/components/marketplace/: cart-sidebar.tsx  favorite-button.tsx  product-card.tsx  size-selection-modal.tsx
ui/src/hooks/: use-cart.ts  use-favorites.ts
ui/src/lib/: auth-client.ts  product-utils.ts
ui/src/routes/: _marketplace.tsx
ui/src/stores/: cart-store.ts  favorites-store.ts
(+21 files in other folders)
