[package]
name = "nft_market_contract"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.17.0", features = ["legacy"] }
near-sdk-macros = "5.17.0"
borsh = "1.5.7"
serde_json = "1.0"

[dev-dependencies]
near-sdk = { version = "5.17.0", features = ["unit-testing"] }
near-workspaces = "0.21.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
